EPBDS-9046 Show warning message, in case of comparison Vocabulary value with value outside Vocabulary (#391)